--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,14 @@ body {
 
 }
 
+.profile{
+
+	max-width:  80%;
+	max-height: 80%;
+	border: 5px solid white;
+}
+
+.page-title	{
+	text-align: center;
+}
+
