make 10 by 10 html grid. Getting started on javascript constructors

--- a/styles.css
+++ b/styles.css
@@ -17,3 +17,12 @@ body {
 	text-align: center;
 }
 
+.conway-grid td {
+  background-color: white;
+  height: 10px;
+  width: 10px;
+}
+
+.conway-grid td.active {
+	background-color: black;
+}
